--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.8",
+    "@tippyjs/react": "^4.2.6",
+    "@tiptap/extension-bullet-list": "^3.0.1",
+    "@tiptap/extension-code": "^3.0.1",
+    "@tiptap/extension-code-block-lowlight": "^3.0.7",
+    "@tiptap/extension-highlight": "^3.0.3",
+    "@tiptap/extension-list": "^3.0.7",
+    "@tiptap/extension-list-item": "^3.0.1",
+    "@tiptap/extension-ordered-list": "^3.0.1",
+    "@tiptap/extension-subscript": "^3.0.3",
+    "@tiptap/extension-superscript": "^3.0.3",
+    "@tiptap/extension-text-align": "^3.0.3",
+    "@tiptap/extension-text-style": "^3.0.1",
+    "@tiptap/extension-underline": "^3.0.1",
+    "@tiptap/html": "^3.0.9",
+    "@tiptap/react": "^3.0.1",
+    "@tiptap/starter-kit": "^3.0.1",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.517.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-form-hook": "^0.0.1",
     "react-hook-form": "^7.58.1",
-    "tailwind-merge": "^3.3.1"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.6.2",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwind-variants": "^1.0.0",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -35,6 +64,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.4",
     "vite": "^6.3.5"
   }
